--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "asciisd/kyc-core": "dev-main"
+        "asciisd/kyc-core": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^10.0",
