--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,18 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "asciisd/kyc-core": "^1.0"
+        "asciisd/kyc-core": "dev-main"
     },
     "require-dev": {
         "orchestra/testbench": "^10.0",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0"
+    },
+    "repositories": {
+        "kyc-core": {
+            "type": "path",
+            "url": "../laravel-kyc-core"
+        }
     },
     "autoload": {
         "psr-4": {
