feat: Add journey prioritization and verification type differentiation
- Add automatic journey prioritization over simple verification when enabled
- Implement verification type differentiation from redirect URLs
- Add createJourneyVerification() method to ShuftiProApiService
- Enhance redirect URLs with type parameters (journey/simple)
- Improve callback handling with verification type detection
- Add type-specific messaging and data storage
- Include comprehensive examples and documentation
- Maintain backward compatibility with existing implementations

Version: 1.4.0

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "asciisd/kyc-shuftipro",
+    "version": "1.4.0",
     "description": "ShuftiPro driver for KYC (Know Your Customer) verification",
     "type": "library",
     "license": "MIT",
